fix: badge color contrast

--- a/src/styles/components/badge.scss
+++ b/src/styles/components/badge.scss
@@ -8,6 +8,7 @@
 
 .bg {
   &-primary-gray {
+    color: darken($pink, 6.8%);
     background-color: $gray-100;
   }
 
